# arc

./: pyproject.toml
data/: arc-agi_training_challenges.json
src/: wip.ipynb
src/app/: tester.ipynb  tester_cell.ipynb  tester_grid.ipynb  tester_molecule.ipynb
src/helper/: display_helper.py
src/model/: cell.py  challenge_pair.py  grid.py  molecule.py
