[tool.poetry]
name = "arc"
version = "0.1.0"
description = ""
authors = ["Gilles Bodart <gillesbod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
